Read LMArena HTML from disk if we cannot cURL it
LMArena has added Cloudflare protection on the RSC endpoint.
Now the /text page needs to be manually downloaded.

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 /data/missing_aabench_benchmarks.json
 /arena-catalog/
 /data/lmarena.json
+/data/lmarena.html
 /data/missing_lmarena_benchmarks.json
